--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@tailwindcss/cli": "^4.0.12",
+    "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.0.12"
   }
 }
