--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "tailwindcss": "npx @tailwindcss/cli -i ./styles/input.css -o ./styles/output.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@tailwindcss/cli": "^4.0.12",
+    "flatpickr": "^4.6.13",
     "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.0.12"
   }
