--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.0.12",
     "flatpickr": "^4.6.13",
+    "html2canvas-pro": "^1.5.10",
     "sweetalert2": "^11.6.13",
     "tailwindcss": "^4.0.12"
   }
