--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.js"
@@ -21,6 +22,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.2",
+    "mysql": "^2.18.1",
     "node-cron": "^4.0.3"
   },
   "devDependencies": {
