--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.2",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.14.1",
     "node-cron": "^4.0.3"
   },
   "devDependencies": {
